--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,22 @@
 
 body{
     background-color: hsl(0, 0%, 95%);
+    display: flex;
     
 }
 
 .container{
         display: flex;
-        width: 62%;
+        width: 65%;
         height: 460px;
         border-radius: 10px;
-        position: relative;
-        transform: translate(266px, 88px);
-    border-radius: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 7%;
+        margin-bottom: 7%;
+                /* position: relative; */
+        /* transform: translate(266px, 88px); */
+    border-radius: 7px;
     box-shadow: 1px 1px 4px 3.5px rgba(0,0,0,0.1);
   
 }
@@ -27,21 +32,21 @@ body{
     border-radius: 10px 0px 0px 10px;
     float: left;
     background-color: hsl(31, 77%, 52%);
-    width: 35%;
+    width: 36%;
     height: 460px;
 }
 .middle-container{
     display: table-column;
     float: inherit;
     background-color:hsl(184, 100%, 22%) ;
-    width: 35%;
+    width: 36%;
     height: 460px;
 }
 .right-container{
     display: table-column;
     float: right;
    background-color: hsl(179, 100%, 13%);
-   width: 35%;
+   width: 36%;
     height: 460px;
     border-radius:  0px 10px 10px 0px;
 }
@@ -49,7 +54,7 @@ body{
 p{
 line-height: 24px;
 font-family:'Lexend Deca';
-font-weight: 350;
+font-weight: 400;
 color:hsla(0, 0%, 100%, 0.75) ;
 font-size: 13px;
 opacity: 98%;
@@ -112,8 +117,6 @@ button{
     height: 48px;
     width: 148px;
     border-radius: 28px;
-    font-family:'Lexend Deca';
-    font-weight: 400;
     border-width:2px;
     border-style: solid;
     border-color: hsl(0, 0%, 95%) ;
@@ -155,6 +158,7 @@ button{
     font-family:'Lexend Deca';
     font-weight: 400;
     color: hsl(0, 0%, 95%) ;
+    cursor: pointer;
 }
 .btn2:hover{
    
@@ -162,6 +166,7 @@ button{
     font-family:'Lexend Deca';
     font-weight: 400;
     color: hsl(0, 0%, 95%) ;
+    cursor: pointer;
 }
 .btn3:hover{
   
@@ -169,7 +174,7 @@ button{
     font-family:'Lexend Deca';
     font-weight: 400;
     color: hsl(0, 0%, 95%) ;
-    
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 720px) {
