--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,23 @@
 
 body{
     background-color: hsl(0, 0%, 95%);
+    height:100vh ;
     display: flex;
-    
+    align-items: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .container{
     
     display: flex;
-    width: 65%;
+    align-items: center;
+    justify-content: center;
+    /* align-content: center; */
+    /* transform: translate(34% , 30%); */
+    width: 60%;
     height: 460px;
     border-radius: 10px;
-    /* align-content: center; */
-    justify-content: center;
-    /* position: relative; */
-    transform: translate(30% , 16%);
-    border-radius: 7px;
     box-shadow: 1px 1px 4px 3.5px rgb(0 0 0 / 10%);
   
 }
@@ -33,21 +35,21 @@ body{
     border-radius: 10px 0px 0px 10px;
     float: left;
     background-color: hsl(31, 77%, 52%);
-    width: 36%;
+    width: 34%;
     height: 460px;
 }
 .middle-container{
     display: table-column;
     float: inherit;
     background-color:hsl(184, 100%, 22%) ;
-    width: 36%;
+    width: 34%;
     height: 460px;
 }
 .right-container{
     display: table-column;
     float: right;
    background-color: hsl(179, 100%, 13%);
-   width: 36%;
+   width: 34%;
     height: 460px;
     border-radius:  0px 10px 10px 0px;
 }
@@ -78,30 +80,13 @@ color:hsl(0, 0%, 95%) ;
     margin-top: 9%;
 }
 
-.box3-1 {
+.box3 {
     display:block;
-    margin-left: 15%;
+    margin-left: 3em;
     margin-top: auto;
-    margin-right: 25%;
+    margin-right: 4.6em;
     margin-bottom: auto;
 }
-
-.box3-2 {
-    display: block;
-    margin-left: 15%;
-    margin-top: auto;
-    margin-right: 19%;
-    margin-bottom: auto;
-}
-
-.box3-3 {
-    display: block;
-    margin-left: 15%;
-    margin-top: auto;
-    margin-right: 21%;
-    margin-bottom: auto;
-}
-
 
 .box4
 {   width: 33%;
@@ -109,6 +94,7 @@ color:hsl(0, 0%, 95%) ;
     display: flex;
     position: absolute;
     transform: translate(-13px, 2px);
+  
 }
 
 
@@ -125,7 +111,9 @@ button{
     font-family:'Lexend Deca';
     font-weight: 400;
     color: hsl(0, 0%, 95%);
-    transform: translate(52px, 58px);
+    transform: translate(58px, 49px);
+    display: block;
+
 }
 
 .btn1{
@@ -151,6 +139,7 @@ button{
     font-weight: 400;
     color: hsl(179, 100%, 13%);
     background-color: hsl(0, 0%, 95%) ;
+   
 
 }
 
