delet absolute from buttom

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body{
     height:100vh ;
     display: flex;
     align-items: center;
-    align-items: center;
     justify-content: center;
 }
 
@@ -92,9 +91,8 @@ color:hsl(0, 0%, 95%) ;
 {   width: 33%;
     height: 35%;
     display: flex;
-    position: absolute;
     transform: translate(-13px, 2px);
-  
+  display: block;
 }
 
 
@@ -112,7 +110,7 @@ button{
     font-weight: 400;
     color: hsl(0, 0%, 95%);
     transform: translate(58px, 49px);
-    display: block;
+    /* display: block; */
 
 }
 
@@ -133,13 +131,13 @@ button{
 
 
 }
+
 .btn3{
     border-radius: 28px;
     font-family:'Lexend Deca';
     font-weight: 400;
     color: hsl(179, 100%, 13%);
     background-color: hsl(0, 0%, 95%) ;
-   
 
 }
 
